--- a/client/views/admin/customer/edit/content/index.ejs
+++ b/client/views/admin/customer/edit/content/index.ejs
@@ -1,4 +1,4 @@
-<div id="content-edit-product" class="col-sm-8 col-lg-10 mt-5 mb-5">
+<div id="content-edit-customer" class="col-sm-8 col-lg-10 mt-5 mb-5">
     <h2>Edit category <%= name %> </h2>
     <form action="/admin/customer" method="post" enctype="multipart/form-data">
         <div class="mb-3">
