--- a/client/views/admin/common/menu/list.ejs
+++ b/client/views/admin/common/menu/list.ejs
@@ -4,6 +4,5 @@
     <%- include("./item.ejs", {content: "Product", icon: "fa-solid fa-diagram-project", link: "/admin/product"}) %>
     <%- include("./item.ejs", {content: "Customer", icon: "fa-solid fa-diagram-project", link: "/admin/customer"}) %>
     <%- include("./item.ejs", {content: "Partner", icon: "fa-solid fa-diagram-project", link: "/admin/partner"}) %>
-    <%- include("./item.ejs", {content: "Chat", icon: "fa-brands fa-rocketchat", link: "#"}) %>
-    <%- include("./item.ejs", {content: "Blog", icon: "fa-solid fa-pen-to-square", link: "/admin/blog"}) %>
+    <%- include("./item.ejs", {content: "Department", icon: "fa-solid fa-diagram-project", link: "/admin/department"}) %>
 </div>
