--- a/client/views/admin/department/edit/content/index.ejs
+++ b/client/views/admin/department/edit/content/index.ejs
@@ -1,6 +1,6 @@
-<div id="content-edit-category" class="col-sm-8 col-lg-10 mt-5 mb-5">
+<div id="content-edit-department" class="col-sm-8 col-lg-10 mt-5 mb-5">
     <h2>Edit category <%= name %> </h2>
-    <form action="/admin/category" method="post" enctype="multipart/form-data">
+    <form action="/admin/customer" method="post" enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label">ID</label>
             <input class="form-control" name="id" value="<%= id %>" readonly>
@@ -8,10 +8,10 @@
         <div class="mb-3">
             <div class="mb-2">
                 <label for="Image" class="form-label">Banner</label>
-                <input class="form-control" type="file" id="formFile" onchange="preview()" name="file">
+                <input class="form-control" type="file" id="formFile" onchange="preview()" name="file" required>
                 <div onclick="clearImage()" class="btn btn-primary mt-3">Click me</div>
             </div>
-            <img id="frame" src="<%= banner %>" class="img-fluid" />
+            <img id="frame" src="<%= logo %>" class="img-fluid" />
         </div>
         <div class="mb-3">
             <label class="form-label">Name</label>
@@ -19,7 +19,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Description</label>
-            <textarea class="form-control" name="description" rows="3"><%= description %> </textarea>
+            <textarea class="form-control" name="shortDes" rows="3"><%= description %> </textarea>
         </div>
         
         <button class="btn btn-primary" type="submit">Update</button>
