--- a/client/views/admin/aboutUs/content/index.ejs
+++ b/client/views/admin/aboutUs/content/index.ejs
@@ -1,5 +1,5 @@
 <div id="content-about-us" class="col-sm-8 col-lg-10">
-    <h2>Edit content About Us Pag </h2>
+    <h2>Edit content About Us Page </h2>
     <form action="/admin/aboutus" method="post">
         <div class="mb-3">
             <label class="form-label">Introduction</label>
