--- a/client/views/admin/common/menu/list.ejs
+++ b/client/views/admin/common/menu/list.ejs
@@ -5,4 +5,5 @@
     <%- include("./item.ejs", {content: "Customer", icon: "fa-solid fa-diagram-project", link: "/admin/customer"}) %>
     <%- include("./item.ejs", {content: "Partner", icon: "fa-solid fa-diagram-project", link: "/admin/partner"}) %>
     <%- include("./item.ejs", {content: "Department", icon: "fa-solid fa-diagram-project", link: "/admin/department"}) %>
+    <%- include("./item.ejs", {content: "Personnel", icon: "fa-solid fa-diagram-project", link: "/admin/personnel"}) %>
 </div>
