--- a/client/views/admin/department/add/content/index.ejs
+++ b/client/views/admin/department/add/content/index.ejs
@@ -1,5 +1,5 @@
 <div id="content-addnew-department" class="col-sm-8 col-lg-10 mt-5 mb-5">
-    <h2>Add new Customer</h2>
+    <h2>Add new Department</h2>
     <form action="/admin/department" method="post" enctype="multipart/form-data">
         <div class="mb-3">
             <div class="mb-2">
