--- a/client/views/admin/department/content/action.ejs
+++ b/client/views/admin/department/content/action.ejs
@@ -1,3 +1,3 @@
 <div class="btn-group mt-3">
-    <a href="/admin/department/add" class="btn btn-primary">Add new Customer</a>
+    <a href="/admin/department/add" class="btn btn-primary">Add new Department</a>
 </div>
