--- a/client/views/admin/department/edit/content/index.ejs
+++ b/client/views/admin/department/edit/content/index.ejs
@@ -1,5 +1,5 @@
 <div id="content-edit-department" class="col-sm-8 col-lg-10 mt-5 mb-5">
-    <h2>Edit category <%= name %> </h2>
+    <h2>Edit department <%= name %> </h2>
     <form action="/admin/customer" method="post" enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label">ID</label>
