logo, banner admin

--- a/client/public/css/aboutUs/aboutUs-contact-img.css
+++ b/client/public/css/aboutUs/aboutUs-contact-img.css
@@ -1,5 +1,5 @@
 .aboutUs-contact-img{
-    background-image: url('../../img/Background.jpg');
+    background-image: url('../../img/banner/bannerPage.jpg');
     background-size: cover;
     height: 700px;
     color: white;
