--- a/client/public/css/product/product-page.css
+++ b/client/public/css/product/product-page.css
@@ -3,7 +3,7 @@
 }
 
 .img-contact {
-    background: url('/img/Background.jpg');
+    background: url('/img/banner/bannerPage.jpg');
 }
 
 @media screen and (max-width: 750px) {
