--- a/client/views/common/header/nav-menu.ejs
+++ b/client/views/common/header/nav-menu.ejs
@@ -1,6 +1,6 @@
 <menu class="nav-menu">
     <div class="nav-menu-brand">
-        <div class="logo-brand"><a href="/home"><img src="/img/logo/logo_header.png" alt="logo gpt group"></a></div>
+        <div class="logo-brand"><a href="/home"><img src="/img/logo/logo.png" alt="logo gpt group"></a></div>
     </div>
     <div class="menu-list">
         <span class="menu-item"><a href="/aboutus">ABOUT US</a></span>
