--- a/client/public/css/customer/customer.css
+++ b/client/public/css/customer/customer.css
@@ -117,7 +117,7 @@ body{
     align-items: center;
     justify-content: center;
     color: white;
-    background-image: url('/img/Background.jpg');
+    background-image: url('/img/banner/bannerPage.jpg');
     height: 700px;
     max-height: 700px;
     min-height: 700px;
