--- a/client/views/admin/category/edit/index.ejs
+++ b/client/views/admin/category/edit/index.ejs
@@ -5,4 +5,5 @@
             <%- include ("./content/index.ejs", category) %> 
         </div> 
     </div>
+    <script src="/javascript/admin/index.js"></script>
 <%- include("../../tail/tail.ejs") %>  
