--- a/client/views/admin/customer/edit/content/index.ejs
+++ b/client/views/admin/customer/edit/content/index.ejs
@@ -8,10 +8,10 @@
         <div class="mb-3">
             <div class="mb-2">
                 <label for="Image" class="form-label">Banner</label>
-                <input class="form-control" type="file" id="formFile" onchange="preview()" name="file" required>
+                <input class="form-control" type="file" id="formFile" onchange="preview()" name="file" required data-focus="banner-customer">
                 <div onclick="clearImage()" class="btn btn-primary mt-3">Click me</div>
             </div>
-            <img id="frame" src="<%= logo %>" class="img-fluid" />
+            <img id="banner-customer" src="<%= logo %>" class="img-fluid" />
         </div>
         <div class="mb-3">
             <label class="form-label">Name</label>
