--- a/client/views/admin/department/add/content/index.ejs
+++ b/client/views/admin/department/add/content/index.ejs
@@ -4,10 +4,10 @@
         <div class="mb-3">
             <div class="mb-2">
                 <label for="Image" class="form-label">Logo</label>
-                <input class="form-control" type="file" id="formFile" onchange="preview()" name="file">
+                <input class="form-control" type="file" id="formFile" onchange="preview()" name="file" data-focus="logo-department-add">
                 <div onclick="clearImage()" class="btn btn-primary mt-3">Click me</div>
             </div>
-            <img id="frame" src="" class="img-fluid" />
+            <img id="logo-department-add" src="" class="img-fluid" />
         </div>
         <div class="mb-3">
             <label class="form-label">Name</label>
