--- a/client/views/admin/personnel/edit/content/index.ejs
+++ b/client/views/admin/personnel/edit/content/index.ejs
@@ -7,11 +7,11 @@
         </div>
         <div class="mb-3">
             <div class="mb-2">
-                <label for="Image" class="form-label">Banner</label>
-                <input class="form-control" type="file" id="formFile" onchange="preview()" name="file">
+                <label for="Image" class="form-label">Image</label>
+                <input class="form-control" type="file" id="formFile" onchange="preview()" name="file" data-focus="image-leader">
                 <div onclick="clearImage()" class="btn btn-primary mt-3">Click me</div>
             </div>
-            <img id="frame" src="<%= img %>" class="img-fluid" />
+            <img id="image-leader" src="<%= img %>" class="img-fluid" />
         </div>
         <div class="mb-3">
             <label class="form-label">Name</label>
