--- a/client/views/common/head.ejs
+++ b/client/views/common/head.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/img/logo/logo_header.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title><%= title %> </title>
 </head>
 <body>
