--- a/client/views/common/tail.ejs
+++ b/client/views/common/tail.ejs
@@ -1,3 +1,4 @@
     <script src="/javascript/index.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 </html>
