--- a/client/views/common/head.ejs
+++ b/client/views/common/head.ejs
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="/img/logo/logo_header.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title><%= title %> </title>
 </head>
 <body>
