--- a/client/views/admin/common/menu/list.ejs
+++ b/client/views/admin/common/menu/list.ejs
@@ -8,4 +8,5 @@
     <%- include("./item.ejs", {content: "Partner", icon: "fa-solid fa-handshake-angle", link: "/admin/partner"}) %>
     <%- include("./item.ejs", {content: "Department", icon: "fa-solid fa-building-user", link: "/admin/department"}) %>
     <%- include("./item.ejs", {content: "Personnel", icon: "fa-solid fa-people-group", link: "/admin/personnel"}) %>
+    <%- include("./item.ejs", {content: "Contact", icon: "fa-solid fa-phone", link: "/admin/contact"}) %>
 </div>
