--- a/client/views/product-detail/detailProduct-body/detail-makeForU.ejs
+++ b/client/views/product-detail/detailProduct-body/detail-makeForU.ejs
@@ -1,13 +1,13 @@
-<div class="features-function">
-    <h3 class="title-features">We can support for you</h3>
-    <div class="products">
-        <% utility.forEach(element => { %>
-            <div class="card-prduct">
-                <img src="/img/project/banner/utility.jpg" alt="" class="card-product-img">
-                <div class="card-name">
-                    <%= element %>
+<div class="support_product">
+    <div class="features-function slide-potenial">
+        <h3 class="title-features">We can support for you</h3>
+        <div class="product">
+            <% utility.forEach((element, index) => { %>
+                <div class="item-utility">
+                    <div class="circle"><%= index + 1 %> </div>
+                    <h3 class="item-title"><%= element %></h3>
                 </div>
-            </div>
-        <% }) %>
+            <% }) %>
+        </div>
     </div>
 </div>
